# nrf_ble_mobile

./: CMakeLists.txt  README.md  build.sh  clean.sh  flash.sh  pm_static.yml  prj.conf
inc/: PROTOCOL.h  ble_part.h  factory_data_part.h  main.h  nvs_part.h  packet_build.h  parser.h  usb_part.h
src/: PROTOCOL.c  ble_part.c  ble_part.cpp  main.c  main.cpp  nvs_part.c  nvs_part.cpp  packet_build.c  parser.c  usb_part.c
Новая папка/: ble_part.cpp  ble_part.h  main.cpp  nvs_part.cpp
